# install-action

./: .deny.toml  .git-blame-ignore-revs  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  TOOLS.md  action.yml  biome.json  cargo-audit.json  cargo-auditable.json  cargo-binstall.json  cargo-careful.json  cargo-crap.json  cargo-cyclonedx.json  cargo-deadlinks.json  cargo-deb.json  cargo-deny.json  cargo-dinghy.json  cargo-export.json  cargo-hack.json  cargo-insta.json  cargo-lambda.json  cargo-llvm-cov.json  cargo-machete.json  cargo-make.json  cargo-minimal-versions.json  cargo-neat.json  cargo-nextest.json  cargo-no-dev-deps.json  cargo-rdme.json  cargo-semver-checks.json  cargo-shear.json  cargo-sort.json  cargo-spellcheck.json  cargo-tarpaulin.json  cargo-udeps.json  (+59 more)
.github/: dependabot.yml  zizmor.yml
.github/.cspell/: organization-dictionary.txt  project-dictionary.txt  rust-dependencies.txt
.github/ISSUE_TEMPLATE/: new_tool.yml
.github/workflows/: ci.yml  manifest.yml  manifest_sync.yml  release.yml
ci/: manifest.sh  publish.sh
manifests/: agave.json  auto-doc.json  biome.json  bpf-linker.json  cargo-about.json  cargo-acl.json  cargo-apple-runner.json  cargo-audit.json  cargo-auditable.json  cargo-binstall.json  cargo-careful.json  cargo-crap.json  cargo-cyclonedx.json  cargo-deadlinks.json  cargo-deb.json  cargo-deny.json  cargo-dinghy.json  cargo-export.json  cargo-fuzz.json  cargo-hack.json  cargo-insta.json  cargo-lambda.json  cargo-leptos.json  cargo-llvm-cov.json  cargo-machete.json  cargo-make.json  cargo-minimal-versions.json  cargo-mutants.json  cargo-neat.json  cargo-nextest.json  cargo-no-dev-deps.json  cargo-rdme.json  cargo-semver-checks.json  cargo-shear.json  cargo-sort.json  cargo-spellcheck.json  cargo-tarpaulin.json  cargo-udeps.json  cargo-valgrind.json  cargo-vet.json  (+65 more)
tools/: checkout-manifest-schema-branch.sh  manifest.sh  publish.sh  rustup-hash.sh  tidy.sh  update-markdown.sh
tools/ci/: checkout-manifest-schema-branch.sh  manifest.sh  release-post-commit.sh  tool-list.sh
tools/codegen/: Cargo.toml
tools/codegen/base/: agave.json  auto-doc.json  biome.json  bpf-linker.json  cargo-about.json  cargo-acl.json  cargo-apple-runner.json  cargo-audit.json  cargo-auditable.json  cargo-binstall.json  cargo-careful.json  cargo-crap.json  cargo-cyclonedx.json  cargo-deadlinks.json  cargo-deb.json  cargo-deny.json  cargo-dinghy.json  cargo-export.json  cargo-fuzz.json  cargo-hack.json  cargo-insta.json  cargo-lambda.json  cargo-leptos.json  cargo-llvm-cov.json  cargo-machete.json  cargo-make.json  cargo-minimal-versions.json  cargo-mutants.json  cargo-neat.json  cargo-nextest.json  cargo-no-dev-deps.json  cargo-rdme.json  cargo-semver-checks.json  cargo-shear.json  cargo-sort.json  cargo-spellcheck.json  cargo-tarpaulin.json  cargo-udeps.json  cargo-valgrind.json  cargo-vet.json  (+67 more)
tools/codegen/src/: lib.rs  main.rs  process.rs  tools-markdown.rs
tools/manifest-schema/: CHANGELOG.md  Cargo.toml
tools/manifest-schema/src/: lib.rs
