[package]
name = "install-action-internal-codegen"
edition = "2021"
default-run = "generate-manifest"

[dependencies]
anyhow = "1"
flate2 = "1"
fs-err = "2"
minisign-verify = "0.2"
semver = { version = "1", features = ["serde"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
sha2 = "0.10"
spdx = "0.10"
tar = "0.4"
toml_edit = { version = "0.22", default-features = false, features = ["parse", "serde"] }
# TODO: call curl command instead of using ureq?
ureq = { version = "2", features = ["json"] }

[lints]
workspace = true

[[bin]]
bench = false
name = "generate-manifest"
path = "src/main.rs"
test = false

[[bin]]
bench = false
name = "generate-tools-markdown"
path = "src/tools-markdown.rs"
test = false
